change ManagedDownloader.needed to an IntervalSet so that overlapping chunks can be coalesced together.